KSBWI-842 fixed horizontal scroll bar showing on desktop

--- a/src/TabPagination/TabBarScrolled.scss
+++ b/src/TabPagination/TabBarScrolled.scss
@@ -1,11 +1,19 @@
 :local(.container) {
    position: relative;
    padding: 0 16px;
+
+   &.mobile-device {
+      padding: 0;
+   }
 }
 
 // field of view
 :local(.eyeshot) {
    overflow-x: hidden;
+
+   .mobile-device & {
+      overflow-x: scroll;
+   }
 }
 
 // tab bar
